--- a/index.css
+++ b/index.css
@@ -1,94 +1,110 @@
-html{
-   width: 100%;
-   height: 100%;
-   background: #242326;
-   margin: 0;
+html {
+    width: 100%;
+    height: 100%;
+    background: #242326;
+    margin: 0;
 }
-body{
-   width: 100%;
-   min-height: 100%;
-   margin: 0;
-   font-family: 'Istok Web', sans-serif;
-   color: #fff202;
-   text-align: center;
+
+body {
+    width: 100%;
+    min-height: 100%;
+    margin: 0;
+    font-family: 'Istok Web', sans-serif;
+    color: #fff202;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 300px auto;
+    grid-template-areas: ". header ." ". main .";
 }
-header{
-   grid-column: 1/4;
-   grid-row: 1/2;
-   text-align: center;
-   line-height: 300px;
-   color: #fff202;
+
+header {
+    grid-area: header;
+    text-align: center;
+    line-height: 300px;
+    color: #fff202;
+    background-position: center;
+    background-size: cover;
 }
-header p{
-   font-size: 42pt;
-   margin: 0;
-   font-family: Istok Web;
+
+    header p {
+        font-size: 42pt;
+        margin: 0;
+        font-family: Istok Web;
+    }
+
+main {
+    grid-area: main;
+    margin-top: 50px;
 }
-main{
-   grid-column: 2/3;
-   grid-row: 2/3;
-   margin-top: 50px;
+
+.button {
+    background: #242326;
+    border: solid 1px #fff202;
+    color: #fff202;
+    border-radius: 5px;
+    min-height: 40px;
+    min-width: 80px;
+    filter: drop-shadow(0 0px 0px rgba(255, 242, 2, 0.1));
+    outline: none;
+    transition-duration: 0.2s;
+    font-size: 12pt;
+    text-decoration: none;
+    padding: 10px 15px;
 }
-.button{
-   background: #242326;
-   border: solid 1px #fff202;
-   color: #fff202;
-   border-radius: 5px;
-   min-height: 40px;
-   min-width: 80px;
-   filter: drop-shadow(0 0px 0px rgba(255, 242, 2, 0.1));
-   outline: none;
-   transition-duration: 0.2s;
-   font-size: 12pt;
-   text-decoration: none;
-   padding: 10px 15px;
+
+    .button:hover {
+        filter: drop-shadow(0 2px 5px rgba(255, 242, 2, 0.2));
+        color: #242326;
+        background: #fff202;
+    }
+
+#back_button {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    font-size: 25px;
+    line-height: 52px;
+    position: fixed;
+    margin: 20px;
+    text-decoration: none;
+    color: #fff202;
+    background: #242326;
+    border: solid 1px #fff202;
+    transition-duration: 0.2s;
 }
-.button:hover{
-   filter: drop-shadow(0 2px 5px rgba(255, 242, 2, 0.2));
-   color: #242326;
-   background: #fff202;
+
+    #back_button:hover {
+        filter: drop-shadow(0 2px 5px rgba(255, 242, 2, 0.2));
+        color: #242326;
+        background: #fff202;
+    }
+
+.project_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat( auto, auto);
+    grid-gap: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 50px;
+    border-bottom: solid 1px #fff202;
 }
-#back_button{
-   width: 50px;
-   height: 50px;
-   border-radius: 50px;
-   font-size: 25px;
-   line-height: 52px;
-   position: fixed;
-   margin: 20px;
-   text-decoration: none;
-   color: #fff202;
-   background: #242326;
-   border: solid 1px #fff202;
-   transition-duration: 0.2s;
-}
-#back_button:hover{
-   filter: drop-shadow(0 2px 5px rgba(255, 242, 2, 0.2));
-   color: #242326;
-   background: #fff202;
-}
-.project_container{
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   grid-template-rows: repeat( auto, auto);
-   grid-gap: 5px;
-   padding-bottom: 5px;
-   margin-bottom: 50px;
-   border-bottom: solid 1px #fff202;
-}
-.project_container h1{
-   text-align: center;
-   grid-column: 1/3;
-   color: #fff202;
-   font-family: Istok Web;
-}
-.project_container img{
-   width: 300px;
-   border-radius: 5px;
-}
-.project_container p{
-   grid-column: 1/3;
-   color: #fff202;
-   width: 605px;
-   text-align: center;
-}
+
+    .project_container h1 {
+        text-align: center;
+        grid-column: 1/3;
+        color: #fff202;
+        font-family: Istok Web;
+    }
+
+    .project_container img {
+        width: 300px;
+        border-radius: 5px;
+    }
+
+    .project_container p {
+        grid-column: 1/3;
+        color: #fff202;
+        width: 605px;
+        text-align: center;
+    }
