--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ main {
         border-radius: 5px;
     }
 
-    .project_container p {
+    .project_container .text {
         grid-column: 1/3;
         color: #fff202;
         width: 605px;
